@@ -60,7 +60,7 @@ public class KtLintCompat1Dot0Dot0AdapterTest {
 		try (InputStream is = KtLintCompat1Dot0Dot0AdapterTest.class.getResourceAsStream("/" + name)) {
 			Files.copy(is, path.resolve(name));
 		}
-		return new String(Files.readAllBytes(path.resolve(name)), StandardCharsets.UTF_8);
+		return Files.readString(path.resolve(name));
 	}
 
 }
